# pygpx

./: .pre-commit-config.yaml  pyproject.toml
data/: .ride.gpx.swp  ride.gpx
src/pygpx/: __init__.py  __main__.py  activity.py  constants.py  geo.py  models.py  parser.py  stats.py
tests/: conftest.py  helpers.py  test_parser.py
tests/data/: ride.gpx
