[project]
name = "pygpx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "piotr-pawelczak", email = "pecio@student.agh.edu.pl" }
]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.13.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
